[package]
name = "all-my-circuits"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
ignore = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
